tests/error/array_mutable.gw
#! [contains] non-mutable
4 :=> [1][1];
